--- a/artikel.html
+++ b/artikel.html
@@ -12,7 +12,7 @@
         <label for="check" class="checkbtn">
             <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
         </label>
-        <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
+        <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
         <ul>
             <li><a class="klik" href="index.html">Home</a></li>
             <li><a href="alam.html">Booking</a></li>
@@ -61,6 +61,7 @@
         <br>
         <p>
             Selain tempat yang disebutkan di atas kita masih bisa mengunjungi beberapa lokasi lagi seperti
+        </p>
         <pre>
             1.	Pantai Pulau Merah
             2.	Syariah Beach
@@ -86,6 +87,7 @@
             22.	Pantai Palukuning
             23.	Pantai Perpat
         </pre>
+        <p>
             Itu tadi beberapa lokasi tempat wisata lebaran di Banyuwangi yang bisa kalian kunjungi. Tempat yang disebutkan di tas pastinya akan bisa membuat liburan kita menjadi lebih menyenangkan dan mengasyikan. Apalagi jika kita berkunjung bersama keluarga dan kerabat. Semoga informasi tadi bermanfaat.
         </p>
     </div>
