--- a/bank.html
+++ b/bank.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank</title>
+    <title>Pesan</title>
     <link rel="stylesheet" href="bank.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <label for="check" class="checkbtn">
             <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
         </label>
-        <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
+        <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="klik" href="alam.html">Booking</a></li>
@@ -32,13 +32,14 @@
                 Rp400.000,00
             </div>
         </div>
+    </div>
     <div class= "bawah">
         <div class="bnykorg">
-            <label for="bnykorg">Jumlah orang :</label>
+            <h3 for="bnykorg">Jumlah orang :</h3>
             <input type="number" id="number">
         </div>
         <div class="tgl">
-            <label for="tgl">Pilih tanggal :</label>
+            <h3 for="tgl">Pilih tanggal :</h3>
             <input type="date" id="tgl">
             <label for="smpai">-</label>
             <input type="date" id="tgl">
