--- a/edit akun.html
+++ b/edit akun.html
@@ -22,7 +22,7 @@
     </nav>
     <div class="editakun">
         <div class="fotoprofil">
-            <p style="font-size: 20px;">Gino Gilang Kurniawan</p>
+            <p>Gino Gilang Kurniawan</p>
             <img src="Gambar Mlakujatim/fotoprofil.png" alt=""><br>
             <input type="file" name="file" id="file"><br>
             <a class="perbarui" href="edit akun.html"><p>Simpan foto profil</p></a>
