--- a/editnomor.html
+++ b/editnomor.html
@@ -22,7 +22,7 @@
     </nav>
     <div class="editakun">
         <div class="fotoprofil">
-            <p style="font-size: 20px;">Dewa Gembel</p>
+            <p>Gino Gilang Kurniawan</p>
             <img src="Gambar Mlakujatim/fotoprofil.png" alt=""><br>
             <input type="file" name="file" id="file"><br>
             <a class="perbarui" href="edit akun.html"><p>Simpan foto profil</p></a>
@@ -37,7 +37,7 @@
                 </div>
                 <hr><br>
                 <input type="text" id="masukkannama" placeholder=" Perbarui nama">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nama Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="password">
                 <div class="namabagianatas">
@@ -68,7 +68,7 @@
                 <p id="bintang">0895705502360</p><br>
                 <p>Nomor telepon</p>
                 <input type="text" id="masukkannomor" placeholder=" Perbarui nomor">
-                <a class="perbarui" href="edit akun.html"><button type="submit">simpan</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Nomor Hp Berhasil Ditambahkan')">simpan</button></a>
             </div>
             <div class="email">
                 <div class="namabagianatas">
@@ -77,7 +77,7 @@
                 </div>
                 <hr><br>
                 <input type="email" id="masukkanemail" placeholder=" Perbarui email">
-                <a class="perbarui" href="edit akun.html"><button type="submit">perbarui</button></a>
+                <a class="perbarui" href="edit akun.html"><button type="submit" onclick="alert('Data Email Berhasil Diperbaharui')">perbarui</button></a>
             </div>
             <div class="hubungkanakun">
                 <p>Hubungkan akun</p>
