--- a/editwisata.html
+++ b/editwisata.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>add wisata</title>
-    <link rel="stylesheet" href="addwisata.css">
+    <title>Edit wisata</title>
+    <link rel="stylesheet" href="editwisata.css">
 </head>
 <body>
     <nav>
@@ -20,6 +20,7 @@
             <li><a id="login" href="login 1.html">Login</a></li>
         </ul>
     </nav>
+    <h2>Edit wisata</h2>
     <table>
         <div class="masukkangambar">
             <tr id="masukkan gambar">
@@ -59,12 +60,9 @@
             <td colspan="3"><textarea name="transportasi" id="transportasi" cols="30" rows="8"></textarea></td>
         </tr>
         <tr>
-            <td colspan="6"><input type="checkbox"> Dengan ini saya menyatakan akan bertanggungjawab dan akan memberikan pelayanan maksimal</td>
-        </tr>
-        <tr>
             <td colspan="6">
                 <div class="tombol">
-                    <a href="pemesanan.html"><button type="submit">Simpan</button></a>
+                    <a href="kelolawisata.html"><button type="submit">Simpan</button></a>
                 </div>
             </td>
         </tr>
