--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <label for="check" class="checkbtn">
             <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
         </label>
-        <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
+        <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
         <ul>
             <li><a class="klik" href="index.html">Home</a></li>
             <li><a href="alam.html">Booking</a></li>
@@ -147,19 +147,19 @@
                         Sidoarjo merupakan salah satu dari <br>
                         beberapa kota yang juga terkenal sebagai.. 
                     </p>
-                </div><br>
-                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
+                </div>
+                <a class="hrefbaca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
-            <div class="osing">
-                <h5>Tempat Wisata Lebaran di Banyuwangi</h5><br>
-                <img src="Gambar Mlakujatim/desa wisata osing banyuwangi.jpg" alt="artikel"><br>
+            <div class="lamongan">
+                <h5>17 Destinasi Libur Lebaran <br> di Lamongan</h5>
+                <img src="Gambar Mlakujatim/wisata bahari lamongan.jpg" alt="artikel"><br>
                 <div class="text">
                     <p>
-                        Jika kita berbicara mengenai <br>
-                        liburan maka ada banyak sekali tempat...
+                        Jawa timur adalah salah satu dari beberapa <br> 
+                        provinsi di Indonesia yang bisa dikatakan...
                     </p>
-                </div><br>
-                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
+                </div>
+                <a class="hrefbaca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
             <div class="blitar">
                 <h5>19 Wisata Sejarah di Blitar yang Wajib <br> Dikunjungi</h5>
@@ -169,44 +169,44 @@
                         Sebagai salah satu tujuan tempat wisata <br>
                         di Jawa Timur, Kota Blitar memang men...
                     </p>
-                </div><br>
-                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
+                </div>
+                <a class="hrefbaca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
         </div>
         <br>
         <div class="daftarartikel2">
             <div class="malang">
-                <h5>Destinasi Libur Lebaran di Malang</h5><br>
+                <h5>Destinasi Libur Lebaran di Malang</h5>
                 <img src="Gambar Mlakujatim/-kusuma-agrowisata-batu malang.jpg" alt="artikel"><br>
                 <div class="text">
                     <p>
                         Kata lebaran bagi masyarakat indonesia <br> 
                         memiliki arti yang tersendiri. Selain itu..
                     </p>
-                </div><br>
-                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
+                </div>
+                <a class="hrefbaca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
             <div class="surabaya">
-                <h5>Liburan Akhir Tahun di Surabaya</h5><br>
+                <h5>Liburan Akhir Tahun di Surabaya</h5>
                 <img src="Gambar Mlakujatim/pantai kenjeran surabaya.jpg" alt="artikel"><br>
                 <div class="text">
                     <p>
                         Jika kalian mencari referensi liburan akhir <br>
                         tahun di Indonesia, maka kota Surabaya...
                     </p>
-                </div><br>
-                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
+                </div>
+                <a class="hrefbaca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
-            <div class="lamongan">
-                <h5>17 Destinasi Libur Lebaran di Lamongan</h5><br>
-                <img src="Gambar Mlakujatim/wisata bahari lamongan.jpg" alt="artikel"><br>
+            <div class="osing">
+                <h5>Tempat Wisata Lebaran di Banyuwangi</h5>
+                <img src="Gambar Mlakujatim/desa wisata osing banyuwangi.jpg" alt="artikel"><br>
                 <div class="text">
                     <p>
-                        Jawa timur adalah salah satu dari beberapa <br> 
-                        provinsi di Indonesia yang bisa dikatakan...
+                        Jika kita berbicara mengenai <br>
+                        liburan maka ada banyak sekali tempat...
                     </p>
-                </div><br>
-                <a id="baca" href="artikel.html"><h4 class="baca">BACA</h4></a>
+                </div>
+                <a class="hrefbaca" href="artikel.html"><h4 class="baca">BACA</h4></a>
             </div>
         </div>
     </div>
