--- a/kelolawisata.html
+++ b/kelolawisata.html
@@ -12,7 +12,7 @@
         <label for="check" class="checkbtn">
             <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
         </label>
-        <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
+        <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="alam.html">Booking</a></li>
@@ -41,7 +41,7 @@
                 <td>Mei - Oktober</td>
                 <td>Rp400.000</td>
                 <td></td>
-                <td><button type="submit" id="btnedit">Edit</button></td>
+                <td><a href="editwisata.html"><button type="submit" id="btnedit">Edit</button></a></td>
             </tr>
         </table>
     </div>
