--- a/pemesanan.html
+++ b/pemesanan.html
@@ -12,7 +12,7 @@
         <label for="check" class="checkbtn">
             <i class="menubtn"><img src="Gambar Mlakujatim/menubtn.png" alt=""></i>
         </label>
-        <a id="logo" href="#"><label class="logo1">Mlaku</label><label class="logo2">jatim</label></a>
+        <label class="logo1">Mlaku</label><label class="logo2">jatim</label>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a class="klik" href="alam.html">Booking</a></li>
@@ -34,6 +34,7 @@
                 (Mei- Oktober)
             </p>
         </div>
+    </div>
     <div class= "bawah">
         <div class="deskripsi">
             <p>
@@ -81,8 +82,5 @@
     <div class="akhir">
         <a href="bank.html"><button type="submit">Pesan</button></a>
     </div>
-    <br>
-    <br>
-    <br>
 </body>
 </html>
